# chat_vector_dev

./: pyproject.toml
src/: create_chat_model.py  infer_chat_model.py  infer_mistral_instruct.py  infer_swallow_ms.py  models.py
src/config/: settings.py
src/utils/: common.py
