[tool.poetry]
name = "chat_vector_dev"
version = "0.1.0"
description = ""
authors = ["Your Name <your@email.com>"]
packages = [
    { include = "*", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.28.1"
torch = "^2.0.0"
pydantic = "^1.10.7"
accelerate = "^0.30.1"
sentencepiece = "^0.1.99"
protobuf = "^4.22.3"